FIX (gallery) Add spacing to video caption
Top margin added to paragraph when shown

--- a/src/patterns/gallery/gallery.scss
+++ b/src/patterns/gallery/gallery.scss
@@ -22,6 +22,10 @@
         .btn {
             margin-top: 20px; 
         }
+
+        figcaption + p {
+            margin-top:10px;
+        }
     }
 
 }
